Fixed password visibility icon

--- a/src/components/SignIn/SignIn.scss
+++ b/src/components/SignIn/SignIn.scss
@@ -46,6 +46,7 @@
       color: $white;
     }
     input {
+      position: relative;
       border: none;
       border-bottom: 1px solid rgba(0, 0, 0, 0.44);
       width: 289px;
@@ -55,6 +56,9 @@
 
     &__fill {
       img {
+        position: absolute;
+        bottom: 253px;
+        right: 94px;
         width: 24px;
         height: 24px;
         margin: 0px;
